Update script to only limit amount to 1 for digital products

--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -195,8 +195,16 @@
     <script>
       async function checkQuantityInCart(){
         const variantId = {{product.selected_or_first_available_variant.id}}
+        const productId = {{product.id}}
+        const tags = {{product.tags | json}}
+
+        if(!tags.includes("Digital download")) return
+
         const cartContents = await fetch(window.Shopify.routes.root + "cart.js").then(res=>res.json()).then(json => json.items)
-        const alreadyInCart = cartContents.some(item => item.variant_id = variantId)
+        const alreadyInCart = cartContents.some(item => item.variant_id === variantId && item.product_id === productId)
+        console.log(cartContents)
+        console.log(variantId)
+        console.log(alreadyInCart)
 
         const form = document.querySelector("product-form")
         const submitButton = form.querySelector("button[type='submit']")
