--- a/snippets/tags.liquid
+++ b/snippets/tags.liquid
@@ -1,7 +1,7 @@
 <div class='tw-flex tw-flex-wrap tw-w-full tw-gap-4'>
   {%- for tag in tags -%}
     <span class='tw-border tw-border-black tw-px-3 tw-py-2 tw-bg-black tw-text-white tw-text-xl tw-uppercase tw-font-medium'>
-      {{- tag -}}
+      {{ tag }}
     </span>
   {%- endfor -%}
 </div>
