--- a/assets/app.css
+++ b/assets/app.css
@@ -611,12 +611,20 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.tw-ml-auto {
+  margin-left: auto;
+}
+
 .tw-flex {
   display: flex;
 }
 
 .tw-grid {
   display: grid;
+}
+
+.tw-hidden {
+  display: none;
 }
 
 .tw-aspect-square {
@@ -653,6 +661,14 @@ video {
   place-items: center;
 }
 
+.tw-items-end {
+  align-items: flex-end;
+}
+
+.tw-justify-end {
+  justify-content: flex-end;
+}
+
 .tw-gap-4 {
   gap: 1rem;
 }
@@ -663,6 +679,14 @@ video {
 
 .tw-self-start {
   align-self: flex-start;
+}
+
+.tw-self-end {
+  align-self: flex-end;
+}
+
+.tw-justify-self-end {
+  justify-self: end;
 }
 
 .tw-rounded-md {
@@ -696,6 +720,11 @@ video {
 .tw-bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.tw-bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .tw-p-6 {
