Add image swatches to variant picker

--- a/assets/component-product-variant-picker.css
+++ b/assets/component-product-variant-picker.css
@@ -67,9 +67,11 @@ variant-selects {
   color: rgba(var(--color-foreground));
   border-radius: var(--variant-pills-radius);
   color: rgb(var(--color-foreground));
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
+  gap: 1rem;
   margin: 0.7rem 0.5rem 0.2rem 0;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   font-size: 1.4rem;
   letter-spacing: 0.1rem;
   line-height: 1;
@@ -77,6 +79,9 @@ variant-selects {
   transition: border var(--duration-short) ease;
   cursor: pointer;
   position: relative;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
 }
 
 .product-form__input--pill input[type='radio'] + label:before {
@@ -99,8 +104,8 @@ variant-selects {
 }
 
 .product-form__input--pill input[type='radio']:checked + label {
-  background-color: rgb(var(--color-foreground));
-  color: rgb(var(--color-background));
+  background-color: rgba(var(--color-foreground), 0.1);
+  color: rgb(var(--color-foreground));
 }
 
 @media screen and (forced-colors: active) {
