--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -11,11 +11,11 @@
 {% endcomment %}
 {%- unless product.has_only_default_variant -%}
   <variant-selects
-    id="variant-selects-{{ section.id }}"
-    data-section="{{ section.id }}"
-    data-url="{{ product.url }}"
+    id='variant-selects-{{ section.id }}'
+    data-section='{{ section.id }}'
+    data-url='{{ product.url }}'
     {% if update_url == false %}
-      data-update-url="false"
+      data-update-url='false'
     {% endif %}
     {{ block.shopify_attributes }}
   >
@@ -33,10 +33,10 @@
         endif
       -%}
       {%- if picker_type == 'swatch' -%}
-        <fieldset class="js product-form__input product-form__input--swatch">
-          <legend class="form__label">
+        <fieldset class='js product-form__input product-form__input--swatch'>
+          <legend class='form__label'>
             {{ option.name }}:
-            <span data-selected-swatch-value="{{ option.name }}">
+            <span data-selected-swatch-value='{{ option.name }}'>
               {{- option.selected_value -}}
             </span>
           </legend>
@@ -48,8 +48,8 @@
           %}
         </fieldset>
       {%- elsif picker_type == 'button' -%}
-        <fieldset class="js product-form__input product-form__input--pill">
-          <legend class="form__label">{{ option.name }}</legend>
+        <fieldset class='{%- if product.metafields.product.option_images -%} tw-grid tw-grid-cols-2 tw-gap-4 md:tw-gap-2 {%-endif -%} js product-form__input product-form__input--pill'>
+          <legend class='form__label'>{{ option.name }}</legend>
           {% render 'product-variant-options',
             product: product,
             option: option,
@@ -58,24 +58,24 @@
           %}
         </fieldset>
       {%- else -%}
-        <div class="product-form__input product-form__input--dropdown">
-          <label class="form__label" for="Option-{{ section.id }}-{{ forloop.index0 }}">
+        <div class='product-form__input product-form__input--dropdown'>
+          <label class='form__label' for='Option-{{ section.id }}-{{ forloop.index0 }}'>
             {{ option.name }}
           </label>
-          <div class="select">
+          <div class='select'>
             {%- if picker_type == 'swatch_dropdown' -%}
               <span
-                data-selected-dropdown-swatch="options[{{ option.name | escape }}]"
-                class="dropdown-swatch"
+                data-selected-dropdown-swatch='options[{{ option.name | escape }}]'
+                class='dropdown-swatch'
               >
                 {% render 'swatch', swatch: option.selected_value.swatch, shape: block.settings.swatch_shape %}
               </span>
             {%- endif -%}
             <select
-              id="Option-{{ section.id }}-{{ forloop.index0 }}"
-              class="select__select"
-              name="options[{{ option.name | escape }}]"
-              form="{{ product_form_id }}"
+              id='Option-{{ section.id }}-{{ forloop.index0 }}'
+              class='select__select'
+              name='options[{{ option.name | escape }}]'
+              form='{{ product_form_id }}'
             >
               {% render 'product-variant-options',
                 product: product,
@@ -89,7 +89,7 @@
         </div>
       {%- endif -%}
     {%- endfor -%}
-    <script type="application/json">
+    <script type='application/json'>
       {{ product.variants | json }}
     </script>
   </variant-selects>
