--- a/assets/app.css
+++ b/assets/app.css
@@ -623,12 +623,24 @@ video {
   display: grid;
 }
 
+.\!tw-hidden {
+  display: none !important;
+}
+
 .tw-hidden {
   display: none;
 }
 
 .tw-aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.tw-aspect-\[3\] {
+  aspect-ratio: 3;
+}
+
+.tw-aspect-\[3\/2\] {
+  aspect-ratio: 3/2;
 }
 
 .tw-size-16 {
@@ -645,8 +657,16 @@ video {
   width: 100%;
 }
 
+.tw-w-auto {
+  width: auto;
+}
+
 .tw-shrink-0 {
   flex-shrink: 0;
+}
+
+.tw-grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .tw-flex-col {
@@ -675,6 +695,10 @@ video {
 
 .tw-gap-6 {
   gap: 1.5rem;
+}
+
+.tw-gap-2 {
+  gap: 0.5rem;
 }
 
 .tw-self-start {
@@ -712,6 +736,11 @@ video {
   background-color: rgb(255 247 237 / var(--tw-bg-opacity));
 }
 
+.tw-bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .tw-bg-sky-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(186 230 253 / var(--tw-bg-opacity));
@@ -722,9 +751,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.tw-bg-red-500 {
+.tw-bg-red-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.\!tw-bg-red-400 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity)) !important;
 }
 
 .tw-p-6 {
@@ -764,6 +798,13 @@ video {
   text-transform: uppercase;
 }
 
+.tw-ordinal {
+  --tw-ordinal: ordinal;
+  font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero)
+    var(--tw-numeric-figure) var(--tw-numeric-spacing)
+    var(--tw-numeric-fraction);
+}
+
 .tw-text-orange-800 {
   --tw-text-opacity: 1;
   color: rgb(154 52 18 / var(--tw-text-opacity));
@@ -777,4 +818,25 @@ video {
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.\!tw-shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25) !important;
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+@media (min-width: 750px) {
+  .md\:tw-w-full {
+    width: 100%;
+  }
+
+  .md\:tw-w-auto {
+    width: auto;
+  }
+
+  .md\:tw-gap-2 {
+    gap: 0.5rem;
+  }
 }
