--- a/snippets/product-variant-options.liquid
+++ b/snippets/product-variant-options.liquid
@@ -116,7 +116,7 @@
             src='{{ obj.image | image_url: width: 200 }}'
             width='full'
             height='full'
-            class='tw-w-full tw-aspect-[3/2] block'
+            class='tw-w-full tw-aspect-[3/2] tw-block tw-object-contain'
           >
         {%- endif -%}
       {%- endfor -%}
