--- a/assets/app.css
+++ b/assets/app.css
@@ -653,6 +653,10 @@ video {
   height: 2rem;
 }
 
+.tw-h-full {
+  height: 100%;
+}
+
 .tw-w-auto {
   width: auto;
 }
@@ -661,12 +665,44 @@ video {
   width: 100%;
 }
 
+.tw-w-1\/5 {
+  width: 20%;
+}
+
+.tw-w-4\/5 {
+  width: 80%;
+}
+
+.tw-w-1 {
+  width: 0.25rem;
+}
+
+.tw-w-4 {
+  width: 1rem;
+}
+
+.tw-w-\[100px\] {
+  width: 100px;
+}
+
 .tw-shrink-0 {
   flex-shrink: 0;
 }
 
+.tw-origin-center {
+  transform-origin: center;
+}
+
 .tw-grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.tw-grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.tw-grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .tw-flex-col {
@@ -713,6 +749,10 @@ video {
   justify-self: end;
 }
 
+.tw-overflow-hidden {
+  overflow: hidden;
+}
+
 .tw-rounded-md {
   border-radius: 0.375rem;
 }
@@ -724,6 +764,11 @@ video {
 .tw-border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.tw-border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .\!tw-bg-red-400 {
