--- a/assets/app.css
+++ b/assets/app.css
@@ -607,12 +607,84 @@ video {
   --tw-backdrop-sepia: ;
 }
 
+.tw-absolute {
+  position: absolute;
+}
+
+.tw-relative {
+  position: relative;
+}
+
+.tw-bottom-0 {
+  bottom: 0px;
+}
+
+.-tw-left-full {
+  left: -100%;
+}
+
+.-tw-right-full {
+  right: -100%;
+}
+
+.tw-top-1\/2 {
+  top: 50%;
+}
+
+.tw-top-1 {
+  top: 0.25rem;
+}
+
+.tw-right-0 {
+  right: 0px;
+}
+
+.tw-left-4 {
+  left: 1rem;
+}
+
+.tw-top-4 {
+  top: 1rem;
+}
+
+.tw-left-0 {
+  left: 0px;
+}
+
+.tw-top-0 {
+  top: 0px;
+}
+
+.-tw-left-4 {
+  left: -1rem;
+}
+
+.-tw-right-4 {
+  right: -1rem;
+}
+
+.-tw-left-8 {
+  left: -2rem;
+}
+
+.-tw-right-8 {
+  right: -2rem;
+}
+
+.tw-z-10 {
+  z-index: 10;
+}
+
 .tw-col-span-10 {
   grid-column: span 10 / span 10;
 }
 
 .tw-col-span-2 {
   grid-column: span 2 / span 2;
+}
+
+.tw-col-span-full {
+  grid-column: 1 / -1;
 }
 
 .tw-mx-64 {
@@ -631,6 +703,14 @@ video {
 
 .tw-ml-auto {
   margin-left: auto;
+}
+
+.tw-ml-4 {
+  margin-left: 1rem;
+}
+
+.tw-mr-4 {
+  margin-right: 1rem;
 }
 
 .tw-block {
@@ -661,6 +741,10 @@ video {
   aspect-ratio: 1 / 1;
 }
 
+.tw-aspect-auto {
+  aspect-ratio: auto;
+}
+
 .tw-size-16 {
   width: 4rem;
   height: 4rem;
@@ -678,6 +762,26 @@ video {
 
 .tw-h-full {
   height: 100%;
+}
+
+.tw-h-16 {
+  height: 4rem;
+}
+
+.tw-h-64 {
+  height: 16rem;
+}
+
+.tw-h-\[600px\] {
+  height: 600px;
+}
+
+.tw-h-\[400px\] {
+  height: 400px;
+}
+
+.tw-max-h-\[600px\] {
+  max-height: 600px;
 }
 
 .tw-w-auto {
@@ -712,6 +816,10 @@ video {
   width: 800px;
 }
 
+.tw-w-\[600px\] {
+  width: 600px;
+}
+
 .tw-max-w-\[50vw\] {
   max-width: 50vw;
 }
@@ -726,6 +834,20 @@ video {
 
 .tw-origin-center {
   transform-origin: center;
+}
+
+.-tw-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-translate-x-full {
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .tw-grid-cols-2 {
@@ -780,6 +902,10 @@ video {
   gap: 2rem;
 }
 
+.tw-gap-1 {
+  gap: 0.25rem;
+}
+
 .tw-self-start {
   align-self: flex-start;
 }
@@ -808,6 +934,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.tw-rounded-full {
+  border-radius: 9999px;
+}
+
 .tw-border {
   border-width: 1px;
 }
@@ -820,6 +950,19 @@ video {
 .tw-border-red-500 {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+
+.tw-border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.tw-border-white\/75 {
+  border-color: rgb(255 255 255 / 0.75);
+}
+
+.tw-border-black\/75 {
+  border-color: rgb(0 0 0 / 0.75);
 }
 
 .\!tw-bg-red-400 {
@@ -857,6 +1000,44 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.tw-bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.tw-bg-white\/80 {
+  background-color: rgb(255 255 255 / 0.8);
+}
+
+.tw-bg-white\/40 {
+  background-color: rgb(255 255 255 / 0.4);
+}
+
+.tw-bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
+}
+
+.tw-bg-neutral-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 229 229 / var(--tw-bg-opacity));
+}
+
+.tw-bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.tw-from-black\/50 {
+  --tw-gradient-from: rgb(0 0 0 / 0.5) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.tw-from-black {
+  --tw-gradient-from: #000 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .tw-object-contain {
   -o-object-fit: contain;
   object-fit: contain;
@@ -871,6 +1052,10 @@ video {
   padding: 1.5rem;
 }
 
+.tw-p-4 {
+  padding: 1rem;
+}
+
 .tw-px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -879,6 +1064,28 @@ video {
 .tw-py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.tw-px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.tw-px-36 {
+  padding-left: 9rem;
+  padding-right: 9rem;
+}
+
+.tw-pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.tw-pt-0 {
+  padding-top: 0px;
+}
+
+.tw-pb-16 {
+  padding-bottom: 4rem;
 }
 
 .tw-text-center {
@@ -903,6 +1110,11 @@ video {
 .tw-text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.tw-text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .tw-font-medium {
@@ -939,6 +1151,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.tw-opacity-0 {
+  opacity: 0;
+}
+
+.tw-opacity-100 {
+  opacity: 1;
+}
+
 .\!tw-shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25) !important;
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color) !important;
@@ -946,9 +1166,57 @@ video {
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
+.tw-backdrop-blur-md {
+  --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+    var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+    var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+    var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+    var(--tw-backdrop-sepia);
+}
+
+.tw-transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.tw-group:hover .group-hover\:tw-opacity-100 {
+  opacity: 1;
+}
+
 @media (min-width: 750px) {
+  .md\:tw-col-span-10 {
+    grid-column: span 10 / span 10;
+  }
+
+  .md\:tw-col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:tw-block {
+    display: block;
+  }
+
+  .md\:tw-flex {
+    display: flex;
+  }
+
+  .md\:tw-grid {
+    display: grid;
+  }
+
   .md\:tw-w-auto {
     width: auto;
+  }
+
+  .md\:tw-max-w-\[75vw\] {
+    max-width: 75vw;
   }
 
   .md\:tw-gap-2 {
