--- a/assets/base.css
+++ b/assets/base.css
@@ -1188,7 +1188,7 @@ button.shopify-payment-button__button--unbranded,
 .customer button,
 button.shopify-payment-button__button--unbranded {
   min-width: calc(12rem + var(--buttons-border-width) * 2);
-  min-height: calc(4.5rem + var(--buttons-border-width) * 2);
+  min-height: 40px /*calc(4.5rem + var(--buttons-border-width) * 2);*/
 }
 
 .shopify-payment-button__button--branded {
