Update CSS on sample scan

--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -119,7 +119,7 @@
       </div>
     </div>
   </div>
-  <div class="tw-h-full tw-aspect-[3/2] tw-mx-auto tw-relative sample-height" {{ block.shopify_attributes }}>
+  <div class="tw-aspect-[3/2] tw-mx-auto tw-relative sample-height" {{ block.shopify_attributes }}>
     <div class="tw-w-full tw-gap-6 tw-px-6 tw-justify-center md:tw-hidden tw-flex tw-mb-6">
       <button
         id="prev-slide"
